Fixed TestJNICalls